--- a/Fritz.StreamTools/appsettings.json
+++ b/Fritz.StreamTools/appsettings.json
@@ -37,5 +37,9 @@
 	},
 	"GoogleFontsApi": {
 		"Key": ""
+	},
+	"AzureServices": {
+			"CognitiveServicesUrl": "",
+			"ContentModeratorSubKey": ""
 	}
 }
