Got basic moderation working

--- a/Fritz.StreamTools/appsettings.json
+++ b/Fritz.StreamTools/appsettings.json
@@ -39,7 +39,7 @@
 		"Key": ""
 	},
 	"AzureServices": {
-			"CognitiveServicesUrl": "",
-			"ContentModeratorSubKey": ""
+		"CognitiveServicesUrl": "eastus.api.cognitive.microsoft.com",
+		"ContentModeratorSubKey": ""
 	}
 }
